# myweb

./: .gitignore  Cargo.toml  Dioxus.toml
public/: index.html
public/assets/: blog-44526004ce68bf5f.css  echo-3a88efb2926faadd.css  navbar-1d876edb67fd58fe.css  tailwind.css
public/wasm/: myweb.js  myweb.js.br  myweb_bg.wasm  myweb_bg.wasm.br
public/wasm/snippets/dioxus-interpreter-js-161bb2cc5b21a4da/: inline0.js  inline0.js.br
src/: main.rs
