[package]
name = "myweb"
version = "0.1.0"
authors = ["xiehaiyong <xietfsj@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[profile.wasm-dev]
inherits = "dev"
opt-level = 'z'
lto = true
codegen-unit = 1
strip = true

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
